Forgot to add GA tracking code, oops

--- a/index.html
+++ b/index.html
@@ -73,15 +73,16 @@
             <strong>data visualization</strong> and
             <strong>mathematical biology/ ecology modeling</strong>.</p>
         <p>When I am not in "school mode" I love to bike places and appreciate architecture whilst doing so.</p>
-        <p>The curve at the begining of this page is the beautiful <a href= "http://mathworld.wolfram.com/LogisticDistribution.html">logistic distribution</a> with mu fixed at 0.5 and theta varying between .1 and .9.
-        <p>Have a fantastic day!</p>
+        <p>The curve at the begining of this page is the beautiful <a href="http://mathworld.wolfram.com/LogisticDistribution.html">logistic distribution</a> with mu fixed at 0.5 and theta varying between .1 and .9.
+            <p>Have a fantastic day!</p>
     </div>
 
     <hr>
 
     <div id="projectsDiv" class="section">
 
-        <h1><a name="projects">Projects</a></h1>
+        <h1><a name="projects">Projects</a>
+        </h1>
 
         <div class="wrapper">
             <div class="projectPhoto">
@@ -238,190 +239,190 @@
         <div id="resumeMenu">
 
             <h3 class="resumeSections">Education:</h3>
-                <!-- Education SubDiv -->
-                <div>
-                    <p>
-                        <strong>University of Vermont</strong>,
-                        <em>Burlington VT</em>:</p>
-                    <ul>
-                        <li>B.S. in
-                            <strong>mathematics and statistics</strong> with a minor in
-                            <strong>computer science</strong>, Honors College.</li>
-                        <li>Expected graduation: May, 2015.</li>
-                        <li>GPA:
-                            <strong>3.8/4.0</strong>
-                        </li>
-                    </ul>
+            <!-- Education SubDiv -->
+            <div>
+                <p>
+                    <strong>University of Vermont</strong>,
+                    <em>Burlington VT</em>:</p>
+                <ul>
+                    <li>B.S. in
+                        <strong>mathematics and statistics</strong> with a minor in
+                        <strong>computer science</strong>, Honors College.</li>
+                    <li>Expected graduation: May, 2015.</li>
+                    <li>GPA:
+                        <strong>3.8/4.0</strong>
+                    </li>
+                </ul>
 
 
-                </div>
-                <hr>
-                <h3 class="resumeSections">Experience:</h3>
+            </div>
+            <hr>
+            <h3 class="resumeSections">Experience:</h3>
 
-                <!-- Experience -->
-                <div>
-                    <ul>
-                        <li>
-                            <strong>Engineering Intern - User Experience</strong>, Dealer.com,
-                            <em>Burlington, VT</em> [Jan 2015 to Pres.]:
-                            <ul>
-                                <li>Working to help analyze and visualize user interaction with backend products.</li>
-                            </ul>
-                        </li>
-                    </ul>
-                    <ul>
-                        <li>
-                            <strong>Software Engineering Intern</strong>, Conduce,
-                            <em>Carpinteria, CA</em> [Summer 2014]:
-                            <ul>
-                                <li>Self directed project to bring the latest JavaScript visualization technologies to the company's main software platform.</li>
-                                <li>Fully envisioned, prototyped and implemented new data visualization framework in the course of one month.</li>
-                                <li>Constructed training protocol for rapidly bringing third parties up to speed with new protocol.</li>
-                            </ul>
-                        </li>
-                    </ul>
-                    <ul>
-                        <li>
-                            <strong>Human Computer Interaction Researcher</strong>, LabInTheWild (University of Michigan) [Summer 2014]:
-                            <ul>
-                                <li>In charge of developing and implementing interactive data visualizations to help users compare themselves to other demographics.</li>
-                            </ul>
-                        </li>
-                    </ul>
-                    <ul>
-                        <li>
-                            <strong>Undergraduate Researcher</strong>, Rubenstein Lab [2013 to Pres.]:
-                            <ul>
-                                <li>Analyzed and visualized data for CATOS fish tracking project.</li>
-                                <li>Head of data mining project to establish temporal trends in population densities of
-                                    <em>Mysis diluviana</em>.</li>
-                                <li>Running project to mathematically model the migration patterns of
-                                    <em>Mysis diluviana</em> (honors thesis project.)</li>
-                            </ul>
-                        </li>
-                    </ul>
-                    <ul>
-                        <li>
-                            <strong>Undergraduate Researcher</strong>, Bentil Laboratory [2013 to Pres.]:
-                            <ul>
-                                <li>Developing mathematical model to predict the transport of sulfur through the environment with applications in waste cleanup.</li>
-                            </ul>
-                        </li>
-                    </ul>
-                    <ul>
-                        <li>
-                            <strong>Research Assistant</strong>, Adair Laboratory [2012 to '13']:
-                            <ul>
-                                <li>Independently analyzed and constructed statistical models for large data sets pertaining to carbon decomposition rates.</li>
-                            </ul>
-                        </li>
-                    </ul>
-                    <ul>
-                        <li>
-                            <strong>Mathematics, Statistics and Chemistry Tutor</strong>, University of Vermont [2013 to Pres.]:
-                            <ul>
-                                <li>Tutor students seeking assistance in introductory to intermediate classes.</li>
-                            </ul>
-                        </li>
-                    </ul>
-                    <ul>
-                        <li>
-                            <strong>Computer Technician Intern</strong>, Logic Supply,
-                            <em>Burlington, VT</em> [2012 to '13]:
-                            <ul>
-                                <li>Involved in all roles of assembly and stress testing of computer systems.</li>
-                            </ul>
-                        </li>
-                    </ul>
-                    <ul>
-                        <li>
-                            <strong>Baker</strong>, Zingerman's Bakehouse,
-                            <em>Ann Arbor, MI</em> [2009 to '12]:
-                            <ul>
-                                <li>Responsible for production of bread in all stages.</li>
-                                <li>Trained new employees.</li>
-                            </ul>
-                        </li>
-                    </ul>
-                    <ul>
-                        <li>
-                            <strong>Founding Member and Treasurer</strong>, UVM Olympic Weightlifting Team:
-                            <ul>
-                                <li>Co-founded UVM's first weightlifting club sports team.</li>
-                                <li>Responsible for design and implementation of $20,000+ budget.</li>
-                            </ul>
-                        </li>
-                    </ul>
-
-
-                </div>
-                <!-- Break of experience subdiv -->
-                <hr>
-                <h3 class="resumeSections">Technical Skills:</h3>
-                <!-- Technical Skills -->
-                <div>
-
-                    <h4>Experienced with the following:</h4>
-                    <p>
-                        <em>Experience level:</em> * (weak), ** (medium), *** (strong)</p>
-                    <ul>
-                        <li>
-                            <strong>Programming Languages</strong>:
-                            <ul>
-                                <li>Python ***</li>
-                                <li>JavaScript ***
-                                    <ul>
-                                        <li>JQuery ***</li>
-                                        <li>Angular.js *</li>
-                                        <li>D3.js ***</li>
-                                        <li>three.js*</li>
-                                    </ul>
-                                </li>
-                                <li>Matlab ***</li>
-                                <li>R ***</li>
-                                <li>php *</li>
-                                <li>Swift *</li>
-                            </ul>
-                        </li>
-                    </ul>
-                    <ul>
-                        <li>
-                            <strong>Technical Writing</strong>:
-                            <ul>
-                                <li>HTML ***</li>
-                                <li>LateX ***</li>
-                            </ul>
-                        </li>
-                    </ul>
-                    <ul>
-                        <li>
-                            <strong>Software</strong>:
-                            <ul>
-                                <li>Microsoft Office Suite ***</li>
-                                <li>Adobe Creative Suite **</li>
-                                <li>JMP ***</li>
-                            </ul>
-                        </li>
-                    </ul>
+            <!-- Experience -->
+            <div>
+                <ul>
+                    <li>
+                        <strong>Engineering Intern - User Experience</strong>, Dealer.com,
+                        <em>Burlington, VT</em> [Jan 2015 to Pres.]:
+                        <ul>
+                            <li>Working to help analyze and visualize user interaction with backend products.</li>
+                        </ul>
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <strong>Software Engineering Intern</strong>, Conduce,
+                        <em>Carpinteria, CA</em> [Summer 2014]:
+                        <ul>
+                            <li>Self directed project to bring the latest JavaScript visualization technologies to the company's main software platform.</li>
+                            <li>Fully envisioned, prototyped and implemented new data visualization framework in the course of one month.</li>
+                            <li>Constructed training protocol for rapidly bringing third parties up to speed with new protocol.</li>
+                        </ul>
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <strong>Human Computer Interaction Researcher</strong>, LabInTheWild (University of Michigan) [Summer 2014]:
+                        <ul>
+                            <li>In charge of developing and implementing interactive data visualizations to help users compare themselves to other demographics.</li>
+                        </ul>
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <strong>Undergraduate Researcher</strong>, Rubenstein Lab [2013 to Pres.]:
+                        <ul>
+                            <li>Analyzed and visualized data for CATOS fish tracking project.</li>
+                            <li>Head of data mining project to establish temporal trends in population densities of
+                                <em>Mysis diluviana</em>.</li>
+                            <li>Running project to mathematically model the migration patterns of
+                                <em>Mysis diluviana</em> (honors thesis project.)</li>
+                        </ul>
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <strong>Undergraduate Researcher</strong>, Bentil Laboratory [2013 to Pres.]:
+                        <ul>
+                            <li>Developing mathematical model to predict the transport of sulfur through the environment with applications in waste cleanup.</li>
+                        </ul>
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <strong>Research Assistant</strong>, Adair Laboratory [2012 to '13']:
+                        <ul>
+                            <li>Independently analyzed and constructed statistical models for large data sets pertaining to carbon decomposition rates.</li>
+                        </ul>
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <strong>Mathematics, Statistics and Chemistry Tutor</strong>, University of Vermont [2013 to Pres.]:
+                        <ul>
+                            <li>Tutor students seeking assistance in introductory to intermediate classes.</li>
+                        </ul>
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <strong>Computer Technician Intern</strong>, Logic Supply,
+                        <em>Burlington, VT</em> [2012 to '13]:
+                        <ul>
+                            <li>Involved in all roles of assembly and stress testing of computer systems.</li>
+                        </ul>
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <strong>Baker</strong>, Zingerman's Bakehouse,
+                        <em>Ann Arbor, MI</em> [2009 to '12]:
+                        <ul>
+                            <li>Responsible for production of bread in all stages.</li>
+                            <li>Trained new employees.</li>
+                        </ul>
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <strong>Founding Member and Treasurer</strong>, UVM Olympic Weightlifting Team:
+                        <ul>
+                            <li>Co-founded UVM's first weightlifting club sports team.</li>
+                            <li>Responsible for design and implementation of $20,000+ budget.</li>
+                        </ul>
+                    </li>
+                </ul>
 
 
-                </div>
-                <!-- closes the technical skills div -->
-                <hr>
-                <h3 class="resumeSections">Honors and Scholarships:</h3>
-                <!-- closes the Honors and Scholarships -->
-                <div>
-                    <ul>
-                        <li>First place project (among 163 projects) in overall competition at the 2014 UVM Computer Science Fair.</li>
-                        <li>One of three UVM students nominated for Goldwater Scholarship national level competition</li>
-                        <li>Presidential Scholarship </li>
-                        <li>Honors College Dean's Scholarship </li>
-                        <li>URECA summer research scholarship </li>
-                        <li>UVM Office of Undergraduate Research Summer Mini Grant recipient </li>
-                        <li>and James Buxton Scholarship.</li>
-                    </ul>
-                </div>
-                <!-- closes the honors and scholarships div -->
+            </div>
+            <!-- Break of experience subdiv -->
+            <hr>
+            <h3 class="resumeSections">Technical Skills:</h3>
+            <!-- Technical Skills -->
+            <div>
+
+                <h4>Experienced with the following:</h4>
+                <p>
+                    <em>Experience level:</em> * (weak), ** (medium), *** (strong)</p>
+                <ul>
+                    <li>
+                        <strong>Programming Languages</strong>:
+                        <ul>
+                            <li>Python ***</li>
+                            <li>JavaScript ***
+                                <ul>
+                                    <li>JQuery ***</li>
+                                    <li>Angular.js *</li>
+                                    <li>D3.js ***</li>
+                                    <li>three.js*</li>
+                                </ul>
+                            </li>
+                            <li>Matlab ***</li>
+                            <li>R ***</li>
+                            <li>php *</li>
+                            <li>Swift *</li>
+                        </ul>
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <strong>Technical Writing</strong>:
+                        <ul>
+                            <li>HTML ***</li>
+                            <li>LateX ***</li>
+                        </ul>
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <strong>Software</strong>:
+                        <ul>
+                            <li>Microsoft Office Suite ***</li>
+                            <li>Adobe Creative Suite **</li>
+                            <li>JMP ***</li>
+                        </ul>
+                    </li>
+                </ul>
+
+
+            </div>
+            <!-- closes the technical skills div -->
+            <hr>
+            <h3 class="resumeSections">Honors and Scholarships:</h3>
+            <!-- closes the Honors and Scholarships -->
+            <div>
+                <ul>
+                    <li>First place project (among 163 projects) in overall competition at the 2014 UVM Computer Science Fair.</li>
+                    <li>One of three UVM students nominated for Goldwater Scholarship national level competition</li>
+                    <li>Presidential Scholarship </li>
+                    <li>Honors College Dean's Scholarship </li>
+                    <li>URECA summer research scholarship </li>
+                    <li>UVM Office of Undergraduate Research Summer Mini Grant recipient </li>
+                    <li>and James Buxton Scholarship.</li>
+                </ul>
+            </div>
+            <!-- closes the honors and scholarships div -->
 
         </div>
         <!-- closes the menu div -->
@@ -488,7 +489,22 @@
             });
         }
     </script>
+    <script>
+        (function(i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function() {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
+        ga('create', 'UA-53965157-1', 'auto');
+        ga('send', 'pageview');
+    </script>
     <script src="js/script.js"></script>
     <script src="js/bootstrap.min.js"></script>
 
