Fixed about and contact lables

--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="#about">About Me</a>
+                    <li><a href="#about">About</a>
                     </li>
                     <li><a href="#projects">Projects</a>
                     </li>
                     <li><a href="#resume">Resume</a>
                     </li>
-                    <li><a href="#contact">Contact me</a>
+                    <li><a href="#contact">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -51,7 +51,7 @@
     <hr>
 
     <div id="meDiv" class="section">
-        <h1><a name="about">About Me</a>
+        <h1><a name="about">About</a>
         </h1>
         <p class="pictures">
             <img class="photos" src="images/me.jpg" alt="I am a super serious person" height="200px" width="250px">
