--- a/index.html
+++ b/index.html
@@ -88,13 +88,13 @@
         </h1>
 
         <div class="row ">
-            <div class="col-xs-12 col-md-6 text-center">
+            <div class="col-xs-12 col-sm-6 text-center">
                 <a href="http://www.uvm.edu/~nstrayer/manhattanPlots" target="_blank">
                     <img class="projectPic" src="images/projectPics/manhattanPlots.png" alt="Manhattan Plots Viewer" width="">
                 </a>
             </div>
 
-            <div class="col-xs-12 col-md-6">
+            <div class="col-xs-12 col-sm-6">
                 <ul>
                     <strong class="projectTitle"><a href="http://www.uvm.edu/~nstrayer/manhattanPlots" target="_blank"> Interactive Manhattan Plot Viewer</strong> </a>
                         <li>Developed as an experiment in exploratory data visualization.</li>
@@ -106,13 +106,13 @@
         </div>
 
         <div class="row project">
-            <div class="col-xs-12 col-md-6 text-center">
+            <div class="col-xs-12 col-sm-6 text-center">
                 <a href="http://www.uvm.edu/~nstrayer/signLanguage" target="_blank">
                     <img class="projectPic" src="images/projectPics/signLanguage.jpg" alt="Leap Motion Project">
                 </a>
             </div>
 
-            <div class="col-xs-12 col-md-6">
+            <div class="col-xs-12 col-sm-6">
                 <ul>
                     <strong class="projectTitle"> <a href="http://www.uvm.edu/~nstrayer/signLanguage" target="_blank"> Learn ASL numbers with Leap Motion. </a>
                     </strong>
@@ -125,14 +125,14 @@
         </div>
 
         <div class="row project">
-            <div class="col-xs-12 col-md-6 text-center">
+            <div class="col-xs-12 col-sm-6 text-center">
                 <a href="http://www.uvm.edu/~nstrayer/leapD3" target="_blank">
                     <img class="projectPic" src="images/projectPics/leap.jpg" alt="Leap Motion Project">
                 </a>
                 <!-- <iframe width="300" height="200" src="//www.youtube.com/embed/yttEEA-Gd2A" frameborder="0" allowfullscreen></iframe> -->
             </div>
 
-            <div class="col-xs-12 col-md-6">
+            <div class="col-xs-12 col-sm-6">
                 <ul>
                     <strong class="projectTitle"><a href="http://www.uvm.edu/~nstrayer/leapD3" target="_blank"> Experimental Leap Motion + D3.js project. </a>
                     </strong>
@@ -146,13 +146,13 @@
         </div>
 
         <div class="row project">
-            <div class="col-xs-12 col-md-6 text-center">
+            <div class="col-xs-12 col-sm-6 text-center">
                 <a href="http://www.uvm.edu/~nstrayer/histOfPolio" target="_blank">
                     <img class="projectPic" src="images/projectPics/polioHist.jpg" alt="Polio History">
                 </a>
             </div>
 
-            <div class="col-xs-12 col-md-6">
+            <div class="col-xs-12 col-sm-6">
                 <ul>
                     <strong class="projectTitle"> <a href="http://www.uvm.edu/~nstrayer/histOfPolio" target="_blank"> Polio's impact on the United States. </a>
                     </strong>
@@ -164,13 +164,13 @@
         </div>
 
         <div class="row project">
-            <div class="col-xs-12 col-md-6 text-center">
+            <div class="col-xs-12 col-sm-6 text-center">
                 <a href="http://www.uvm.edu/~nstrayer/d3Tests/dataExplore.html" target="_blank">
                     <img class="projectPic" src="images/projectPics/labInTheWild.jpg" alt="Lab In The Wild Project">
                 </a>
             </div>
 
-            <div class="col-xs-12 col-md-6">
+            <div class="col-xs-12 col-sm-6">
                 <ul>
                     <strong class="projectTitle"> <a href="http://www.labinthewild.org/studies/visualization/" target="_blank"> labinthewild.org Interactive Visualization. </a>
                     </strong>
@@ -180,12 +180,12 @@
         </div>
 
         <div class="row project">
-            <div class="col-xs-12 col-md-6 text-center">
+            <div class="col-xs-12 col-sm-6 text-center">
                 <a href="http://www.uvm.edu/~nstrayer/fillingStations" target="_blank">
                     <img class="projectPic" src="images/projectPics/fillingStations.jpg" alt="Alt Fuel Filling Stations">
                 </a>
             </div>
-            <div class="col-xs-12 col-md-6">
+            <div class="col-xs-12 col-sm-6">
                 <ul>
                     <strong class="projectTitle"><a href="http://www.uvm.edu/~nstrayer/fillingStations" target="_blank"> Alternative energy filling stations in the U.S.. </a> </strong>
                     <li>Using d3.hexbin I took took 18k+ data points and binned them to help explore geographic trends in alternative energy filling stations. </li>
@@ -194,12 +194,12 @@
         </div>
 
         <div class="row project">
-            <div class="col-xs-12 col-md-6 text-center">
+            <div class="col-xs-12 col-sm-6 text-center">
                 <a href="http://www.uvm.edu/~nstrayer/superHeroes" target="_blank">
                     <img class="projectPic" src="images/projectPics/superHeroes.jpg" alt="super heroes at the movies">
                 </a>
             </div>
-            <div class="col-xs-12 col-md-6">
+            <div class="col-xs-12 col-sm-6">
                 <ul>
                     <strong class="projectTitle"> <a href="http://www.uvm.edu/~nstrayer/superHeroes" target="_blank"> Marvel Vs. DC in the theater.</a>
                     </strong>
@@ -209,13 +209,13 @@
         </div>
 
         <div class="row project">
-            <div class="col-xs-12 col-md-6 text-center">
+            <div class="col-xs-12 col-sm-6 text-center">
                 <a href="http://www.uvm.edu/~nstrayer/powerVis" target="_blank">
                     <img class="projectPic" src="images/projectPics/CAPower.jpg" alt="california powerplants">
                 </a>
             </div>
 
-            <div class="col-xs-12 col-md-6">
+            <div class="col-xs-12 col-sm-6">
                 <ul>
                     <strong class="projectTitle"> <a href="http://www.uvm.edu/~nstrayer/powerVis" target="_blank"> Where does California get its energy? </a>
                     </strong>
