Fixed a typo in the projects section.

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <ul>
                     <strong class="projectTitle"><a href="http://www.uvm.edu/~nstrayer/manhattanPlots" target="_blank"> Interactive Manhattan Plot Viewer</strong> </a>
                         <li>Developed as an experiment in exploratory data visualization.</li>
-                        <li>Select different controls for comparison, e.g. non-dominant arm grow projectth to see linked snps.</li>
+                        <li>Select different controls for comparison, e.g. non-dominant arm growth to see linked snps.</li>
                         <li>A manhattan plot is a commonly used tool in accessing genetic roots for traits</li>
                         <li>Uses data from the FAMuSS study (<a href="http://isites.harvard.edu/fs/docs/icb.topic1388631.files/thompson_FAMuSS.pdf" target="_blank"> Thompson Et Al. 2004</a>).</li>
                 </ul>
@@ -458,6 +458,8 @@
 </div>
 
     <script type="text/javascript">
+
+        $('#resume').scrollTo()
         $("#resumeButton").click(function() {
             //var link = $(this);
             var link = d3.select("#buttonText");
