Updated resume a bit

--- a/index.html
+++ b/index.html
@@ -251,10 +251,10 @@
                 <ul>
                     <li>B.S. in
                         <strong>mathematics and statistics</strong> with a minor in
-                        <strong>computer science</strong>, Honors College.</li>
-                    <li>Expected graduation: May, 2015.</li>
+                        <strong>computer science</strong>, Honors College Scholar.</li>
+                    <li>May, 2015.</li>
                     <li>GPA:
-                        <strong>3.8/4.0</strong>
+                        <strong>3.82/4.0</strong>
                     </li>
                 </ul>
 
@@ -265,6 +265,15 @@
 
             <!-- Experience -->
             <div>
+                <ul>
+                    <li>
+                        <strong>Data Science Intern</strong>, Dealer.com,
+                        <em>Burlington, VT</em> [March 2015 to May 2015]:
+                        <ul>
+                            <li>Worked with the product analytics team to help parse and visualize large stores of data.</li>
+                        </ul>
+                    </li>
+                </ul>
                 <ul>
                     <li>
                         <strong>Engineering Intern - User Experience</strong>, Dealer.com,
