Added some honors and scholarships

--- a/index.html
+++ b/index.html
@@ -426,6 +426,8 @@
             <!-- closes the Honors and Scholarships -->
             <div>
                 <ul>
+                    <li>Mu Sigma Rho, Statistics Honors Society </li>
+                    <li>Cum Loude</li>
                     <li>First place project (among 163 projects) in overall competition at the 2014 UVM Computer Science Fair.</li>
                     <li>One of three UVM students nominated for Goldwater Scholarship national level competition</li>
                     <li>Presidential Scholarship </li>
