Closed dealer entry in resume

--- a/index.html
+++ b/index.html
@@ -277,9 +277,9 @@
                 <ul>
                     <li>
                         <strong>Engineering Intern - User Experience</strong>, Dealer.com,
-                        <em>Burlington, VT</em> [Jan 2015 to Pres.]:
+                        <em>Burlington, VT</em> [Jan 2015 to March 2015.]:
                         <ul>
-                            <li>Working to help analyze and visualize user interaction with backend products.</li>
+                            <li>Worked to help analyze and visualize user interaction with backend products.</li>
                         </ul>
                     </li>
                 </ul>
